Docker solucion de error
